--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.12"
 commitizen = "^3.29.1"
+mypy = "^1.12.1"
+types-passlib = "^1.7.7.20240819"
+types-python-jose = "^3.3.4.20240106"
 
 [tool.poetry.scripts]
 alembic = "alembic.config:main"
